# cc-flyrig

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  NOTICE.md  README.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  init-container.sh  init-firewall.sh  init-user.sh.example
capture_harness/: README.md  output_scenarios.toml  scenarios.toml
capture_harness/.claude/: settings.json
capture_harness/fixtures/: decision_fixture.py
capture_harness/hooks/: probe.py  worktree_probe.py
capture_harness/servers/: mcp_elicit_server.py
capture_harness/statusline/: probe.py  subagent_probe.py
captures/: .gitkeep
captures/cc-2.1.168/: ConfigChange.jsonl  CwdChanged.jsonl  Elicitation.jsonl  ElicitationResult.jsonl  FileChanged.jsonl  INPUT_COVERAGE.md  InstructionsLoaded.jsonl  MessageDisplay.jsonl  Notification.jsonl  PermissionDenied.jsonl  PermissionRequest.jsonl  PostCompact.jsonl  PostToolBatch.jsonl  PostToolUse.jsonl  PostToolUseFailure.jsonl  PreCompact.jsonl  PreToolUse.jsonl  SessionEnd.jsonl  SessionStart.jsonl  Setup.jsonl  Stop.jsonl  StopFailure.jsonl  SubagentStart.jsonl  SubagentStop.jsonl  TaskCompleted.jsonl  TaskCreated.jsonl  TeammateIdle.jsonl  UserPromptExpansion.jsonl  UserPromptSubmit.jsonl  WorktreeCreate.jsonl  input_manifest.json
captures/cc-2.1.177/: ConfigChange.jsonl  CwdChanged.jsonl  Elicitation.jsonl  ElicitationResult.jsonl  FileChanged.jsonl  INPUT_COVERAGE.md  InstructionsLoaded.jsonl  Setup.jsonl  (+23 more)
scaffolds/: copier.yml
tests/: conftest.py  test_smoke.py
(+738 files in other folders)
